# react_agent_in_edp

./: .env  .gitignore  LICENSE  README.md  agent_runner.ipynb  docker-compose.yml  playground.ipynb  prompts.py  pyproject.toml  temp.abap
agent_tools/: availability_checker.py  email_writing.py  i_agent_tool.py  meeting_scheduling.py  sap_help_searcher.py  tool_builder.py
agents/: react_agent.py
agents/config/: agent_configs.py
config/: LLM_configs.py  router_config.py  supported_llms.py
config/prompts/: prompts.py
docker/: code_server.dockerfile
docs/: agent_judge_sys_promtp.md  atomic_fact_gen_prompt.md  fact_score_prompt.md
docs/architecture/: abap_indexing_sequence.puml  agent_tools_component_diagram.puml  sequence_diagram.puml
docs/thesis_graphs/: ExcecutionFlow.puml  rag.puml
evaluation_metrics/fact_score/: fact_generator.ipynb  fact_generator.py  fact_scorer.py  settings.py
experiments/: LLM_experiment_runner.ipynb  agent_experiment_runner.ipynb  agent_runner.ipynb  experiments_definition.xlsx
experiments/annotations/: json_to_xlsx.ipynb  xlsx_to_json.ipynb
experiments/converters/: json_to_xlsx.ipynb  xlsx_to_json.ipynb
experiments/fact_score/: fact_generator.ipynb  fact_generator.py  fact_scorer.py
experiments/interpretation/: BERTScore_calc.ipynb  ablation_viewer.ipynb  abliation_viewer.ipynb  data_set_explorer.ipynb  example_case_viewer.ipynb  experiment_comparer.ipynb  experiment_comparer_same_llm.ipynb  experiment_folders.py  experiment_viewer.ipynb  interpretation_util.py
experiments/metrics/: agent_judge.py  bert_score.py  llm_judge.py  metrics_test.ipynb
experiments/models/: experiment_models.py
experiments/resources/: annotated_dataset.xlsx
experiments/ressources/: extensibility_assistance.json  malaysia_support_result.json  peppol_support.json  peppol_support_result.json
experiments/results/: present_ids_in_experiment.ipynb
models/: router.py  router_model.py
notebooks/: abap_respository.ipynb  agent_runner.ipynb  agent_single_question.ipynb  agent_single_question_simpified.ipynb  router_tester.ipynb  smithery_tools.ipynb  tool_tester.ipynb  triage_tester.ipynb  xco2_to_db.ipynb
notebooks/experiments/: agent_as_judge.ipynb  agent_repository_test.ipynb
notebooks/external_endpoints/: smithery_tools.ipynb  xco2_to_db.ipynb
notebooks/metrics/: agent_as_judge.ipynb  llm_judge.ipynb
notebooks/resources/: all_classes.json  classes_to_index.json
notebooks/tools/: codebase_memories_searcher.ipynb  db_entries_retriever.ipynb  documentation_retriever.ipynb  sap_help_tester.ipynb  (+2 more)
react_agent/: main_agent.py
req_collections/: deploy_model.rest  get_class_sourcecode.rest  get_db_entries.rest  get_document_source.rest  sap_help_search.rest
runners/: agent_runner.py
testdata/: email.py
util/: llm_proxy.py  router.py
(+227 files in other folders)
