[project]
name = "react-agent"
version = "0.1.0"
description = ""
authors = [
    {name = "Alejandro Restrepo Klinge",email = "56825548+mrrestre@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "dotenv (>=0.9.9,<0.10.0)",
    "pydantic (>=2.10.6,<3.0.0)",
    "langchain (>=0.3.21,<0.4.0)",
    "langchain-google-genai (>=2.1.1,<3.0.0)",
    "langgraph-prebuilt (>=0.1.4,<0.2.0)",
    "langgraph (>=0.3.18,<0.4.0)",
    "langchain-core (>=0.3.47,<0.4.0)",
    "ipykernel (>=6.29.5,<7.0.0)",
    "markdownify (>=1.1.0,<2.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
