[project]
name = "react_agent"
version = "0.1.0"
description = ""
authors = [
    {name = "Alejandro Restrepo Klinge",email = "56825548+mrrestre@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "dotenv (>=0.9.9,<0.10.0)",
    "pydantic (>=2.9.2,<3.0.0)",
    "langchain (>=0.3.21,<0.4.0)",
    "langgraph-prebuilt (>=0.1.4,<0.2.0)",
    "langgraph (>=0.3.18,<0.4.0)",
    "langchain-core (>=0.3.47,<0.4.0)",
    "ipykernel (>=6.29.5,<7.0.0)",
    "markdownify (>=1.1.0,<2.0.0)",
    "tiktoken (>=0.9.0,<0.10.0)",
    "langgraph-checkpoint-postgres (>=2.0.19,<3.0.0)",
    "psycopg (>=3.2.6,<4.0.0)",
    "mcp[cli] (>=1.6.0,<2.0.0)",
    "generative-ai-hub-sdk[all] (>=4.10.2,<5.0.0)",
    "langchain-mcp-adapters (>=0.0.11,<0.0.12)",
    "redis (>=6.1.0,<7.0.0)",
    "bert-score (>=0.3.13,<0.4.0)",
    "rouge-score (>=0.1.2,<0.2.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "ipywidgets (>=8.1.7,<9.0.0)",
]

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
pytest-cov = "^6.1.1"
pandas = "^2.2.3"
openpyxl = "^3.1.5"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

